# holophonix-animator

./: .eslintrc.json  .gitignore  ANIMATION_CRITICAL_BUGFIXES.md  ANIMATION_ENGINE_MIGRATION_ANALYSIS.md  ANIMATION_TIMING_COMPLETE.md  ANIMATION_TIMING_ISSUES.md  BACKGROUND_ANIMATION_FIX.md  BARYCENTER_VS_ANIMATION_CENTER.md  BIDIRECTIONAL_OSC_IMPROVEMENTS.md  BUILD.md  CLEANUP_AUDIT_2024.md  CLEANUP_SUMMARY.md  CONTROL_POINT_ENHANCEMENTS.md  DEVELOPMENT.md  IMPLEMENTATION_CHECKLIST.md  MIGRATION_COMPLETE.md  MIGRATION_STATUS.md  OSC.md  OSCILLATOR_VISUALIZATION_SOLUTION.md  PHYSICS_ENGINE_INTEGRATION_ANALYSIS.md  PHYSICS_FOR_SPATIAL_AUDIO_VALUE.md  PHYSICS_INTEGRATION_COMPATIBILITY.md  PROJECT_SAVE_BUG_FIX.md  README.md  RESTART_REQUIRED.md  SRC_REORGANIZATION_SUMMARY.md  TESTING_MAIN_ENGINE.md  TEST_ENGINE.md  TEST_FILES_ANALYSIS.md  TODO.md  Untitled.hpx  V3_CLEANUP_REMAINING.md  V3_PHASE3_STATUS.md  V3_UNIFIED_TRANSFORM_IMPLEMENTATION.md  ZIGZAG_ENHANCEMENT_PROPOSAL.md  complete_migration.sh  devbook.md  final_cleanup.sh  forge.config.ts  index.html  (+16 more)
archive/src/rust/: Cargo.toml
archive/src/rust/benches/: motion_benchmarks.rs
archive/src/rust/src/: js_bindings.rs  lib.rs  napi.rs  test_napi.rs
archive/src/rust/src/animation/: mod.rs  models.rs
archive/src/rust/src/math/: vector.rs
archive/src/rust/src/state/: registry.rs
archive/src/rust/tests/: animation_tests.rs  history_tests.rs  napi_tests.rs  persistence_tests.rs  state_tests.rs
archive/src/rust/tests/state/: group_tests.rs  track_tests.rs
src/rust/: Cargo.toml  test_multiple_tracks.json  test_persistence.json  test_single_track.json  test_track_with_animation.json  test_track_with_metadata.json
src/rust/benches/: animation_benchmarks.rs  group_benchmarks.rs  vector3_benchmark.rs
src/rust/src/: error.rs  lib.rs  models.rs  state.rs
src/rust/src/animation/: conversions.rs  cycle.rs  engine.rs  engine_test.rs  error.rs  interpolation.rs  mod.rs  models.rs  motion.rs  parameters.rs  plugin.rs  tests.rs  timeline.rs
src/rust/src/animation/cycle/: cycle.rs
src/rust/src/animation/group/: animation.rs  animation_group.rs  formation.rs  mod.rs  napi.rs  relationship.rs  state.rs
src/rust/src/animation/interpolation/: interpolation.rs
src/rust/src/animation/models/: animation.rs  circular.rs  custom_path.rs  easing.rs  linear.rs  mod.rs  pattern.rs  types.rs
src/rust/src/animation/path/: mod.rs
src/rust/src/animation/plugin/: mod.rs
src/rust/src/animation/tests/: engine.rs  mod.rs
src/rust/src/animation/timeline/: animation_timeline.rs  manager.rs  mod.rs  state.rs  tests.rs
src/rust/src/animation/track/: manager.rs  mod.rs  state.rs
src/rust/src/bridge/: mod.rs
src/rust/src/common/: mod.rs
src/rust/src/common/monitoring/: mod.rs
src/rust/src/common/recovery/: mod.rs
src/rust/src/common/tests/: recovery.rs
src/rust/src/cycle/: mod.rs
src/rust/src/error/: animation.rs  mod.rs  osc.rs  state.rs
src/rust/src/error/animation/: mod.rs
src/rust/src/error/osc/: mod.rs
src/rust/src/error/state/: mod.rs
src/rust/src/interpolation/: mod.rs
src/rust/src/models/: animation.rs  common.rs  mod.rs  position.rs
src/rust/src/models/animation/: mod.rs
src/rust/src/models/common/: mod.rs
src/rust/src/models/osc/: mod.rs
src/rust/src/models/state/: mod.rs
src/rust/src/monitoring/: mod.rs
src/rust/src/osc/: client.rs  error.rs  handlers.rs  manager.rs  mod.rs  protocol.rs  server.rs  types.rs
src/rust/src/osc/error/: mod.rs
src/rust/src/osc/models/: types.rs
src/rust/src/osc/tests/: mod.rs  protocol.rs  server.rs
src/rust/src/performance/: mod.rs
src/rust/src/plugin/: mod.rs
src/rust/src/position/: mod.rs
src/rust/src/recovery/: mod.rs
src/rust/src/state/: animation.rs  config.rs  core.rs  group.rs  history.rs  manager.rs  mod.rs  models.rs  persistence.rs  registry.rs  selection.rs  sync.rs  timeline.rs  track.rs  update.rs  wrapper.rs
src/rust/src/state/animation/: group.rs  mod.rs  timeline.rs  track.rs
src/rust/src/state/core/: manager.rs  persistence.rs  sync.rs
src/rust/src/state/tests/: mod.rs  (+2 more)
src/rust/src/test_utils/: assertions.rs  fixtures.rs  generators.rs  mocks.rs  mod.rs
src/rust/src/tests/: integration_tests.rs  mod.rs  osc_state_integration.rs  state.rs  state_group.rs  state_timeline.rs  state_track.rs
src/rust/src/utils/: mod.rs  napi.rs
src/rust/tests/: integration_test.rs  integration_tests.rs  property_tests.rs  vector_test.rs
src/rust/tests/state/: registry_tests.rs
(+1080 files in other folders)
