[package]
name = "holophonix-animator-core"
version = "0.1.0"
edition = "2021"
authors = ["dewiweb"]
description = "Core Rust implementation for Holophonix Animator"

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = { version = "2.12.2", features = ["async"] }
napi-derive = "2.12.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.28", features = ["full"] }
rand = "0.8"
async-trait = "0.1.68"
nalgebra = { version = "0.32", features = ["serde-serialize"] }
splines = { version = "4.1", features = ["serialization"] }
thiserror = "1.0"
log = "0.4"
env_logger = "0.10"
rosc = "0.10"
futures = "0.3"
uuid = { version = "1.4", features = ["v4", "serde"] }
js-sys = "0.3"
float-cmp = "0.9"

[dev-dependencies]
proptest = "1.2"
criterion = { version = "0.5", features = ["async_tokio"] }
tokio-test = "0.4"
test-log = "0.2"
pretty_assertions = "1.3"
async-trait = "0.1"

[build-dependencies]
napi-build = "2.0.1"

[[bench]]
name = "animation_benchmarks"
harness = false
