[package]
name = "holophonix-animator-core"
version = "0.1.0"
edition = "2021"
description = "Core computation engine for Holophonix Animator"

[lib]
name = "holophonix_animator_core"
crate-type = ["cdylib", "rlib"]

[dependencies]
# For N-API bindings
napi = "2.12.2"
napi-derive = "2.12.2"
approx = "0.5"
rayon = "1.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
regex = "1.10.2"
parking_lot = "0.12"

[dev-dependencies]
# For testing
assert_approx_eq = "1.1.0"
test-case = "3.1"
proptest = "1.2"
# For benchmarking
criterion = { version = "0.5", features = ["html_reports"] }
tempfile = "3.8"

[[bench]]
name = "vector3_benchmark"
harness = false

[[bench]]
name = "motion_benchmarks"
harness = false

[[bench]]
name = "group_benchmarks"
harness = false

[build-dependencies]
napi-build = "2.0.1"
